update_map
